syntax = "proto3";

package cart;

option go_package          = "github.com/sedeotech/backend-interview/pkg/rpc/cartpb";
option java_multiple_files = true;
option java_package        = "fr.sedeo";

import "google/protobuf/timestamp.proto";
import "type/address.proto";
import "item/item.proto";

message CartMsg{
	string uuid = 1;
	string user_uuid = 2;

	message EntryMsg{
		item.ItemMsg item = 1;
		int32 quantity = 2;
	}
	repeated EntryMsg entries = 3;

	message ConfigurationMsg{
		type.AddressMsg address = 1;
	}
	ConfigurationMsg configuration = 4;

	double price_total = 5;

	google.protobuf.Timestamp created = 40;
    google.protobuf.Timestamp updated = 41;
}

message CartGetMsg{
	string uuid = 1;
}

message CartGetResultMsg{
	CartMsg result = 1;
}

message CartConfigureAddressMsg{
	string cart_uuid = 1;
	type.AddressMsg address = 2;
}

message CartConfigureResultMsg{
	CartMsg result = 1;
}

message CartAddItemMsg{
	string cart_uuid = 1;
	string item_uuid = 2;
	int32 quantity = 3;
}

message CartAddItemResultMsg{
	CartMsg result = 1;
}

message CartUpdateQuantityMsg{
	string cart_uuid = 1;
	string item_uuid = 2;
	int32 quantity = 3;
}

message CartUpdateQuantityResultMsg{
	CartMsg result = 1;
}

message CartEmptyMsg{
	string cart_uuid = 1;
}

message CartEmptyResultMsg{
	CartMsg result = 1;
}

service Cart {
	rpc Get(CartGetMsg) returns (CartGetResultMsg);
	rpc ConfigureAddress(CartConfigureAddressMsg) returns (CartConfigureResultMsg);
	rpc AddItem (CartAddItemMsg) returns (CartAddItemResultMsg);
	rpc UpdateQuantity(CartUpdateQuantityMsg) returns (CartUpdateQuantityResultMsg);
}